--- a/css/partials/_header.scss
+++ b/css/partials/_header.scss
@@ -3,7 +3,7 @@ $primary-color: #06137b;
 $secondary-color-dark: #4f4f4f;
 $secondary-color-light: #fff;
 $hover-color: #0c20c5;
-$hover-color-nav: #2c2b2b;
+$hover-color-nav: #1a1919;
 $font-small: 0.72em;
 $font-medium-large: 0.9em;
 
