--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@
       .languages p a:active, .languages p a:focus {
         font-weight: bold; }
 
+/*** ALGEMEEN ***/
 .container-footer {
   width: 100%;
   padding-bottom: 1em;
@@ -138,11 +139,13 @@
   .col .blok p {
     margin-bottom: 0; }
 
+/* Kolom 1 -3 */
 p.footer-title {
   font-weight: bold;
   color: black;
   margin-bottom: 0; }
 
+/* Laatste kolom */
 .footer .col:last-child {
   border-left: 1px solid #eaeaea;
   padding-left: 30px; }
@@ -154,9 +157,20 @@ p.footer-title {
     .footer .col:last-child a:hover {
       color: #007773; }
   .footer .col:last-child .footer-title {
-    margin-bottom: 0.1em;
+    margin-bottom: 0.5em;
     font-size: 1em; }
 
+/* Searchbar */
+.search-footer .searchbar {
+  width: 100%;
+  text-align: left; }
+  .search-footer .searchbar input {
+    font-size: 0.9em;
+    width: 86%; }
+  .search-footer .searchbar button {
+    padding-left: 3px; }
+
+/* Contact info */
 .contact-info p {
   margin-left: 5px; }
 
@@ -170,6 +184,7 @@ p.footer-title {
   height: 10px;
   background: url("../images/nav-footer-icons.svg") 56px 0; }
 
+/* Social media */
 .social-icons a img {
   width: 32px;
   height: 32px;
