--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
   position: absolute;
   margin-left: 15%;
   margin-top: -4px;
-  z-index: 1; }
+  z-index: 1;
+  box-shadow: 0px 0px 25px rgba(168, 168, 168, 0.46); }
 
 /***  Navigation top part  ****/
 /* Menu */
