--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,36 @@
 .nav-top-middle {
   padding-left: 1.7em; }
 
+/* Nav not logged in */
+.logged-out .nav li.nav-item-top {
+  width: 90px; }
+  .logged-out .nav li.nav-item-top a {
+    padding-left: 45%; }
+.logged-out .nav li.nav-item-top:first-child a {
+  padding-left: 0; }
+
+/* Nav login */
+.login .nav li.nav-item-top {
+  width: 90px;
+  margin-left: 4.5%;
+  border: none; }
+  .login .nav li.nav-item-top input {
+    font-style: italic;
+    padding-left: 3px;
+    width: 100%;
+    background-color: #f8f8f8;
+    border: 1px solid #e5e5e5; }
+  .login .nav li.nav-item-top a {
+    padding-left: 0; }
+  .login .nav li.nav-item-top button {
+    border-style: none;
+    padding: 0; }
+.login .nav li.nav-item-top:last-child {
+  width: inherit; }
+
+.login .nav li.nav-item-top:first-child, .login .nav li.nav-item-top:nth-child(2) {
+  margin-left: 0; }
+
 /* Searchbar */
 .searchbar {
   text-align: right;
