--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@
 .top-nav {
   font-size: 0.72em;
   font-weight: 600;
-  width: 70%;
   margin-left: 15%; }
 
 .top-nav-menu {
@@ -122,7 +121,6 @@
 .bottom-nav {
   font-size: 0.9em;
   font-weight: 700;
-  width: 70%;
   margin-left: 15%; }
 
 .bottom-nav-menu {
@@ -452,5 +450,19 @@ a, a:hover, a:active, a:focus {
 @media screen and (max-width: 1088px) {
   .text-on-slider p {
     font-size: 0.80em; } }
+@media screen and (max-width: 995px) {
+  .container {
+    width: 80%; }
+
+  .logo-top, .logo-bottom {
+    margin-left: 12%; }
+
+  .text-on-slider {
+    margin-left: 12%;
+    margin-right: 10.5%; }
+
+  .circle-icon {
+    bottom: 44%;
+    margin-left: 9.5%; } }
 
 /*# sourceMappingURL=style.css.map */
