--- a/css/style.scss
+++ b/css/style.scss
@@ -73,15 +73,54 @@ a, a:hover, a:active, a:focus {
 
 
 /**  MEDIA QUERIES **/
+@media screen and (max-width: 1293px) {
+  .circle-icon-header {
+    left: 60%;
+    top: 8%;
+  }
+}
+
+
+@media screen and (max-width: 1239px) {
+  .circle-icon-header {
+    left: 59.5%;
+    top: 5.5%;
+  }
+}
+
+
 @media screen and (max-width: 1227px) {
   .circle-icon {
     bottom: 40%;
   }
 }
 
+
+@media screen and (max-width: 1199px) {
+  .circle-icon-header {
+    left: 58.5%;
+    top: 4%;
+  }
+}
+
+@media screen and (max-width: 1156px) {
+  .circle-icon-header {
+    left: 57%;
+    top: 2%;
+  }
+}
+
+
 @media screen and (max-width: 1147px) {
   .circle-icon {
     bottom: 42%;
+  }
+}
+
+@media screen and (max-width: 1110px) {
+  .circle-icon-header {
+    left: 56%;
+    top: 1%;
   }
 }
 
@@ -101,6 +140,40 @@ a, a:hover, a:active, a:focus {
     bottom: 36%;
   }
 
+}
+
+@media screen and (max-width: 1060px) {
+  .circle-icon-header {
+    left: 55%;
+    top: 0;
+  }
+}
+
+
+@media screen and (max-width: 1030px) {
+  .header-auction {
+    p, h4 {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+    h4 {
+      font-size: 1.1rem;
+    }
+
+    p {
+      font-size: $font-small;
+
+      span:nth-child(2) {
+        font-size: 1em;
+      }
+    }
+
+    a {
+      font-size: 1rem;
+    }
+
+  }
 }
 
 
