--- a/css/style.scss
+++ b/css/style.scss
@@ -1,13 +1,14 @@
 @import "partials/header";
 @import "partials/footer";
 @import "partials/home";
+@import "partials/faq";
 
 $font:'Open Sans', sans-serif;
 $container-width: 70%;
 $primary-color: #06137b;
 $secondary-color-dark: #4f4f4f;
 $secondary-color-light: #fff;
-$link-color: #00ada7;
+$link-color: #01a6a0;
 $hover-color: #0c20c5;
 $hover-color-nav: #2c2b2b;
 $font-small: 0.72em;
