--- a/css/partials/_faq.scss
+++ b/css/partials/_faq.scss
@@ -20,7 +20,7 @@
 
 
 .faq-links {
-  padding: 1.5em;
+  padding: 1.7em;
   border: 1px solid #e5e5e5;
   margin-top: 35px;
 
@@ -53,13 +53,75 @@
 
   p {
     margin-bottom: 0;
+
+   a {
     color: $primary-color;
     font-weight: 700;
     font-size: $font-medium-small;
+    }
   }
 
   img {
     margin-left: 12px;
   }
+
+}
+
+
+.questions-faq {
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+}
+.question {
+  padding-top: 25px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #e5e5e5;
+
+  .row {
+
+    p {
+      margin-bottom: 7px;
+
+     span {
+        font-weight: bold;
+      }
+
+      a {
+        text-decoration: underline;
+        font-weight: bold;
+      }
+    }
+
+    p:first-child {
+      margin-right: 7%;
+      font-size: 1.3em;
+    }
+    p:last-child {
+      width: 90.5%;
+    }
+
+  }
+
+  .row:first-child {
+    color: $primary-color;
+
+    p:last-child {
+      font-weight: bold;
+    }
+  }
+
+
+  .row:last-child {
+    p:last-child {
+      font-size: $font-medium-large;
+    }
+  }
+
+}
+
+
+.question:last-child {
+    border:none;
 
 }
