--- a/css/style.scss
+++ b/css/style.scss
@@ -71,10 +71,13 @@ a, a:hover, a:active, a:focus {
     }
 
     input {
-      padding: 10px 20px;
-      width: 100%;
       background-color: #f8f8f8;
       border: 1px solid #e5e5e5;
+    }
+
+    input, button {
+      padding: 10px 20px;
+      width: 100%;
     }
 
     ::placeholder {
@@ -97,6 +100,10 @@ a, a:hover, a:active, a:focus {
 
     button {
       background-color: #757575;
+      color: white;
+      font-weight: 600;
+      font-size: $font-medium-large;
+      border: 2px solid #757575;
     }
   }
 
